# PersonalProjects

./: README.md
BoardGameSorter/: READMEN.md
SmartWand/: .gitignore  README.md  main.cpp
SmartWand/BLE_practice/: .gitignore  CMakeLists.txt  sdkconfig
SmartWand/BLE_practice/main/: CMakeLists.txt  buffer.c  button.c  button.h  controls.c  controls.h  i2c_control.c  imu.c  imu.h  main.c
SmartWand/BLE_practice/main/controls/: button.c  button.h  controls.c  controls.h  led.c  led.h
SmartWand/Compass/: CMakeLists.txt
SmartWand/Compass/main/: CMakeLists.txt  MPU9250.c  MPU9250.h  data.py  mag_data.csv  mag_data2.csv  mag_data3.csv  mag_data4.csv  main.c
SmartWand/MPU6050_dev/: sdkconfig.old
SmartWand/MPU6050_dev/main/: CMakeLists.txt  ble.c  ble.h  buffer.c  buffer.h  button.c  button.h  controls.h  i2c_control.h  index.html  led.c  led.h
SmartWand/MPU6050_dev/main/madgwick/: MadgwickAHRS.c  MadgwickAHRS.h
SmartWand/esp32-wand-V1/: .gitignore  platformio.ini
SmartWand/esp32-wand-V1/lib/Gyroscope/: gyroscope.h
SmartWand/esp32-wand-V1/src/: config.h  main.cpp  temp.txt
SmartWand/graphics/: CMakeLists.txt
SmartWand/graphics/dependencies/glad/: glad.h
SmartWand/graphics/metal/: main.cpp
SmartWand/graphics/src/: config.h  glad.c  lin_algebra.cpp  lin_algebra.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
SmartWand/graphics/src/shaders/: fragment.txt  vertex.txt
